z-index fix

--- a/src/components/ContentCard/ContentCard.module.css
+++ b/src/components/ContentCard/ContentCard.module.css
@@ -25,6 +25,6 @@
     position: absolute;
     top: 3rem;
     right: 3rem;
-    z-index: 99;
+    z-index: 90;
     transition: 0.3s ease;
 }
